--- a/main.html
+++ b/main.html
@@ -7,6 +7,19 @@
 </head>
 
 <body>
+	<form>
+		<label for="name">Name:</label><br>
+		<input type="text" id="name" name="name" required/><br>
+		<br><label for="age">Age:</label><br>
+		<input type="number" id="age" name="age" required/><br>
+		<br><label for="email">Email:</label><br>
+		<input type="email" id="email" name="email" required/><br>
+		<br><label for="job">Occupation:</label><br>
+		<input type="text" id="job" name="job" required/><br>
+		<br><label for="number">Phone Number:</label><br>
+		<input type="number" id="number" name="number" required/><br>
+		<br><button type="submit" id="btn">Submit</button>
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
