--- a/main.html
+++ b/main.html
@@ -16,8 +16,8 @@
 		<input type="email" id="email" name="email" required/><br>
 		<br><label for="job">Occupation:</label><br>
 		<input type="text" id="job" name="job" required/><br>
-		<br><label for="number">Phone Number:</label><br>
-		<input type="number" id="number" name="number" required/><br>
+		<br><label for="phone">Phone Number:</label><br>
+		<input type="number" id="phone" name="phone" required/><br>
 		<br><button type="submit" id="btn">Submit</button>
 	</form>
 	<!-- the entire body must be written by student -->
