--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		<input type="text" id="job" name="job" required/><br>
 		<br><label for="phone">Phone Number:</label><br>
 		<input type="number" id="phone" name="phone" required/><br>
-		<br><button type="submit" id="btn">Submit</button>
+		<br><input type="button" id="btn"/>
 	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
